// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.native renders a snapshot 1`] = `
<Button
  color="#191919"
  onPress={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
      },
      undefined,
    ]
  }
  title="Button"
>
  Apple
</Button>
`;

exports[`Button.native renders a snapshot with \`disabled\` 1`] = `
<Button
  color="#191919"
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
      },
      undefined,
    ]
  }
  title="Button"
/>
`;

exports[`Button.native renders a snapshot with \`onPress\` 1`] = `
<Button
  color="#191919"
  onPress={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
      },
      undefined,
    ]
  }
  title="Button"
/>
`;

exports[`Button.native renders a snapshot with \`primary\` 1`] = `
<Button
  color="#b71c1c"
  onPress={[Function]}
  primary={true}
  style={
    Array [
      Object {
        "color": "#b71c1c",
      },
      undefined,
    ]
  }
  title="Button"
/>
`;

exports[`Button.native renders a snapshot with \`title:Press\` 1`] = `
<Button
  color="#191919"
  onPress={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
      },
      undefined,
    ]
  }
  title="Press"
/>
`;
